# chassis-workbench

./: .gitignore  README.md  brain_map.py  build_graph.py  conftest.py  make_mindmap.py  make_report.py  make_user_guide.py  package-lock.json  package.json  run_tests.sh  tsconfig.json
api/: main.py  models.py
api/routers/: _physics.py  anti_squat.py  dag_analysis.py  dynamics.py  monte_carlo.py  optimize.py  sensitivity.py  structural.py  sweep.py
chassis-workbench/: CLAUDE.md  STUDIO_VALIDATION.md  index.html  launch.sh  package-lock.json  package.json  vite.config.ts
chassis-workbench/electron/: main.cjs  preload.cjs
chassis-workbench/src/: App.tsx  index.css  main.tsx
chassis_sim/: dynamics.py  geometry.py  stability.py  sweep.py
chassis_sim/tests/: test_dynamics.py  test_fourbar.py  test_geometry.py  test_stability.py  test_sweep.py  test_validation.py
dynamics_engine/: __init__.py  motorcycle_dynamics.py
dynamics_engine/modules/: aero_engine.py  ergonomics_engine.py  (+4 more)
engine/: antiSquat.ts  cog.ts  computeAll.ts  dynamics.ts  ergonomics.ts  geometry.ts  suspension.ts  sweep.ts  types.ts
gazebo_lab/: README.md  package.xml  setup.cfg  setup.py
gazebo_lab/config/: controllers.yaml
gazebo_lab/gazebo_lab/: bike_sdf.py  ft_logger.py  ride_node.py  rig_node.py  run_loadcases.py  worlds.py
gazebo_lab/launch/: loadcases.launch.py
presentation/: build_presentation.py
structural_engine/: __init__.py  gazebo_parse.py  load_cases.py  stiffness_targets.py
tests/: cog.test.ts  geometry.test.ts  suspension.test.ts
validation/: validate_and_report.py
(+121 files in other folders)
