<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_lab</name>
  <version>0.1.0</version>
  <description>Chassis Workbench structural load-case lab: parametric motorcycle in
    Gazebo Classic with force-torque sensors. Rig mode (R0) + self-balancing ride
    mode (R1) generate validated interface loads for the Chassis Workbench.</description>
  <maintainer email="261631710+dikshant1103-beep@users.noreply.github.com">dikshant</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
